[package]
name = "contrack"
version = "0.1.0"
authors = ["John Shewchuk <johnshew@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winping="0.10.1"
native-windows-gui = "1.0.6"
native-windows-derive = "1.0.2" # Optional. Only if the derive macro is used.