[package]
name = "contrac"
description = "ISP connection tracker"
version = "0.6.0"
authors = ["John Shewchuk <johnshew@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/johnshew/contrac"
documentation= "https://github.com/johnshew/contrac"
build= "build.rs"
license="MIT"
keywords = ["windows", "win32", "network"]

[package.metadata.winres]
LegalCopyright = "Copyright © 2020"
FileDescription = "contrac resources"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
chrono = "0.4.19"
directories="3.0"
native-windows-gui = "1.0.6"
native-windows-derive = "1.0.2" 
num="0.3.1"
winapi="0.3"
winping="0.10.1"

[build-dependencies]
embed-resource = "1.3"
